--- a/styles/style.css
+++ b/styles/style.css
@@ -6,3 +6,176 @@ Green: #00B172
 White: #FFF
 
 */
+
+:root {
+	--text-color: #1a1a1a;
+	--green-color: #00b172;
+	--white-color: #fff;
+}
+
+html,
+body {
+	margin: 0;
+	padding: 0;
+	font-family: 'Roboto', sans-serif;
+	color: var(--text-color);
+	box-sizing: border-box;
+}
+
+.nav-bar {
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+	padding: 1rem 2rem;
+	& img {
+		width: 200px;
+	}
+	& ul {
+		display: flex;
+		list-style: none;
+		font-size: 1.2rem;
+		gap: 1.5rem;
+		& li {
+			margin-right: 1rem;
+			& a {
+				text-decoration: none;
+				color: var(--text-color);
+				font-weight: 500;
+			}
+		}
+	}
+}
+
+.header {
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+	height: 820px;
+	background-image: url('../images/landing.jpg');
+	background-size: cover;
+	background-position: 0 0;
+	background-repeat: no-repeat;
+	& h1 {
+		font-size: 5.5em;
+		color: var(--white-color);
+	}
+	& p {
+		width: 50%;
+		text-align: center;
+		font-size: 2em;
+		font-weight: 100;
+		color: var(--white-color);
+	}
+}
+
+.whats-on {
+	width: 100%;
+	height: max-content;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	flex-direction: column;
+	& h2 {
+		font-size: 2.5em;
+		text-decoration: underline var(--green-color);
+	}
+	& ul {
+		width: 100%;
+		display: flex;
+		justify-content: space-evenly;
+		align-items: first baseline;
+		list-style: none;
+		padding: 0;
+		& li {
+			width: 500px;
+			height: 300px;
+			display: flex;
+			flex-direction: column;
+			align-items: center;
+			margin: 10px;
+			& img {
+				width: 150px;
+			}
+			& h3 {
+				font-size: 2em;
+				color: var(--green-color);
+			}
+			& p {
+				width: 80%;
+				font-weight: 100;
+				font-size: 1.9em;
+				text-align: center;
+			}
+		}
+	}
+}
+
+.green-background {
+	background-color: var(--green-color);
+	color: var(--white-color);
+}
+
+.app-section {
+	margin-top: 100px;
+	border: 1px solid var(--green-color);
+	display: flex;
+	justify-content: space-evenly;
+	padding: 3rem;
+
+	ul {
+		margin-top: 100px;
+		width: 500px;
+		text-decoration: none;
+
+		li {
+			width: 70%;
+			gap: 10px;
+			width: 100%;
+
+			h3 {
+				font-size: 2.3em;
+				margin-bottom: 40px; /* Añade un margen inferior de 20px */
+			}
+
+			p {
+				margin-bottom: 80px;
+				font-size: 1.2em;
+				font-weight: 100;
+			}
+		}
+	}
+
+	h2 {
+		margin-top: 100px;
+		font-size: 2.5em;
+		text-decoration: underline var(--white-color);
+	}
+
+	p {
+		width: 100%;
+		text-align: justify;
+		font-size: 2em;
+		font-weight: 100;
+	}
+
+	.icon-logo {
+		width: 150px;
+	}
+
+	img {
+		width: 400px;
+		align-self: center;
+	}
+}
+
+
+
+.flex-center {
+	margin-top: 80px;
+	width: 100%;
+	height: 100vh;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+}
