--- a/styles/style.css
+++ b/styles/style.css
@@ -48,10 +48,10 @@ body {
 
 .header {
 	display: flex;
+	flex-direction: column;
 	justify-content: center;
 	align-items: center;
-	height: 100vh;
-	text-align: center;
+	height: 820px;
 	background-image: url('../images/landing.jpg');
 	background-size: cover;
 	background-position: 0 0;
@@ -169,6 +169,8 @@ body {
 	}
 }
 
+
+
 .flex-center {
 	margin-top: 80px;
 	width: 100%;
@@ -178,8 +180,3 @@ body {
 	align-items: center;
 }
 
-.green-background .icon-logo {
-	position: absolute;
-	top: 50px;
-	right: 50px;
-}
